Basic framework/Styling

--- a/index.html
+++ b/index.html
@@ -1,12 +1,49 @@
 <!DOCTYPE html>
+
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<title>Responsive Calculator</title>
+
+	<link rel="stylesheet" href="stylesheet.css">
 </head>
+
+
 <body>
 
-<h1>Responsive Calculator</h1>
+<div class="container">
+
+	<div class="header">0</div>
+
+	<button class="btn gray">AC</button>
+	<button class="btn gray">+/-</button>
+	<button class="btn gray">%</button>
+	<button class="btn orange">÷</button>
+
+	<button class="btn">7</button>
+	<button class="btn">8</button>
+	<button class="btn">9</button>
+	<button class="btn orange">X</button>
+
+	<button class="btn">4</button>
+	<button class="btn">5</button>
+	<button class="btn">6</button>
+	<button class="btn orange">-</button>
+
+	<button class="btn">1</button>
+	<button class="btn">2</button>
+	<button class="btn">3</button>
+	<button class="btn orange">+</button>
+
+	<button class="btn">0</button>
+	<button class="btn">0</button>
+	<button class="btn">.</button>
+	<button class="btn orange">=</button>
+
+</div>
 
 </body>
+
+
 </html>
