--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 	<title>Responsive Calculator</title>
 
 	<link rel="stylesheet" href="stylesheet.css">
+
+	<script>
+
+    </script>
+
 </head>
 
 
