--- a/index.html
+++ b/index.html
@@ -1,56 +1,65 @@
 <!DOCTYPE html>
-
 <html lang="en">
 
 <head>
 	<meta charset="UTF-8">
-	<title>Responsive Calculator</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>JS Calculator</title>
 
 	<link rel="stylesheet" href="stylesheet.css">
-
-	<script>
-
-    </script>
-
 </head>
-
 
 <body>
 
+	<h1>Calculator</h1>
 
-<!-- Actual Calculator Part -->
-<div class="container">
+	<div id="calcParent">
 
-	<div class="header">0</div>
+		<div class="row">
+			<div class="column" id="calcDisplay">0</div>
+		</div>
 
-	<button class="btn gray">AC</button>
-	<button class="btn gray">+/-</button>
-	<button class="btn gray">%</button>
-	<button class="btn orange">÷</button>
+		<div class="row">
+			<div class="calcBtn column" id="calcClear">AC</div>
+			<div class="calcBtn column" id="calcBackspace">&#8676;</div>
+			<div class="calcBtn calcOperBtn column" id="calcDivide">&#247;</div>
+		</div>
 
-	<button class="btn">7</button>
-	<button class="btn">8</button>
-	<button class="btn">9</button>
-	<button class="btn orange">X</button>
+		<div class="row">
+			<div class="calcBtn calcNumBtn column" id="calcSeven">7</div>
+			<div class="calcBtn calcNumBtn column" id="calcEight">8</div>
+			<div class="calcBtn calcNumBtn column" id="calcNine">9</div>
+			<div class="calcBtn calcOperBtn column" id="calcMultiply">x</div>
+		</div>
 
-	<button class="btn">4</button>
-	<button class="btn">5</button>
-	<button class="btn">6</button>
-	<button class="btn orange">-</button>
+		<div class="row">
+			<div class="calcBtn calcNumBtn column" id="calcFour">4</div>
+			<div class="calcBtn calcNumBtn column" id="calcFive">5</div>
+			<div class="calcBtn calcNumBtn column" id="calcSix">6</div>
+			<div class="calcBtn calcOperBtn column" id="calcSubtract">-</div>
+		</div>
 
-	<button class="btn">1</button>
-	<button class="btn">2</button>
-	<button class="btn">3</button>
-	<button class="btn orange">+</button>
+		<div class="row">
+			<div class="calcBtn calcNumBtn column" id="calcOne">1</div>
+			<div class="calcBtn calcNumBtn column" id="calcTwo">2</div>
+			<div class="calcBtn calcNumBtn column" id="calcThree">3</div>
+			<div class="calcBtn calcOperBtn column" id="calcAdd">+</div>
+		</div>
 
-	<button class="btn">0</button>
-	<button class="btn">0</button>
-	<button class="btn">.</button>
-	<button class="btn orange">=</button>
+		<div class="row">
+			<div class="calcBtn calcNumBtn column" id="calcZero">0</div>
+			<div class="calcBtn column" id="calcDecimal">.</div>
+			<div class="calcBtn calcOperBtn column" id="calcEqual">=</div>
+		</div>
 
-</div>
+	</div>
+
+
+
+	<script>
+	</script>
 
 </body>
-
 
 </html>
