--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<title>JS Calculator</title>
 
 	<link rel="stylesheet" href="stylesheet.css">
+
 </head>
 
 <body>
@@ -56,9 +57,8 @@
 	</div>
 
 
+	<script type="text/javascript" src="functions.js"></script>
 
-	<script>
-	</script>
 
 </body>
 
