visual implementation of % button

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
 		<div class="row">
 			<div class="calcBtn column" id="calcClear">AC</div>
+			<div class="calcBtn column" id="calcPercent">%</div>
 			<div class="calcBtn column" id="calcBackspace">&#8676;</div>
 			<div class="calcBtn calcOperBtn column" id="calcDivide">&#247;</div>
 		</div>
