--- a/index.html
+++ b/index.html
@@ -57,6 +57,14 @@
 
 	</div>
 
+	<div id="nonCalc">
+
+		<p>Hi, this is a calculator built up on the eval() method in javascript.</p>
+
+		<p>Click <a class="cleanLink" href="https://github.com/jonwang2000/Calculator">here</a> to return to Github, or <a class="cleanLink" href="https://wangjonathan.me/">here</a> for my website.</p>
+
+	</div>
+
 
 	<script type="text/javascript" src="functions.js"></script>
 
